workspace/operators/v1/fundamental/stream_classification.md
---
id: stream_classification
name: 投资流派分类
category: fundamental
tags: [classification, strategy, valuation]
data_needed: [daily_indicators, basic_info, cashflow, balancesheet, income]
outputs:
  - field: investment_stream
    type: str
    desc: "纯硬收息/价值发现/烟蒂股/关联方资源"
  - field: stream_reasoning
    type: str
    desc: "流派归属的关键判据与推理过程"
---

## 投资流派分类决策树

本算子用于将目标公司归类到四种投资流派之一，每种流派有不同的买入逻辑、估值方法和风险关注点。分类结果将直接影响后续分析框架的选择。

### 一、四流派概览

| 流派 | 核心逻辑 | 收益来源 | 典型行业 |
|------|----------|----------|----------|
| 纯硬收息 | 稳定高股息，类债券替代 | 股息收入为主 | 公用事业/高速/物业/银行 |
| 价值发现 | 低估值+盈利拐点 | 估值修复+盈利增长 | 周期股/消费/制造 |
| 烟蒂股 | 股价低于清算价值 | 资产重估/清算回收 | 各行业深度破净标的 |
| 关联方资源 | 母公司资源注入预期 | 资产注入/整合溢价 | 央企上市平台/集团子公司 |

### 二、前置条件检查

在进入流派分类前，先完成以下前置判断：

```
步骤0A：基本面排除项
  [ ] 是否连续2年经营现金流为负？-> 若是，需额外谨慎
  [ ] 是否存在退市风险警示（ST/*ST）？-> 若是，仅烟蒂股可考虑
  [ ] 管理人诚信评级是否为"不可信"？-> 若是，全部流派排除

步骤0B：央国企背景门槛（必要条件）
  央国企背景是核心仓位的必要条件，不仅仅是加分项。
  [ ] 判定企业类型（参考soe_identification算子结果）：
      ├── 央企（国资委直管）-> 核心仓位首选，进入流派判定
      ├── 地方国企（省级/直辖市）-> 可核心配置，进入流派判定
      ├── 混合所有制（大型央企集团控股）-> 进入流派判定（周期拐点时可重配）
      └── 纯民营 -> 仅限以下情形可考虑：
            ├── 周期极底部 + FCF倍数<3倍 + 现金流明确改善 -> 可作为卫星配置
            ├── 品牌护城河极强 + 极端低估 -> 小仓位试探
            └── 其他情形 -> 排除

  组合目标：
  ├── 核心仓位（60%以上）：纯央企
  ├── 卫星仓位（20%）：地方国企 + 混合所有制
  └── 民营标的（<20%）：仅限极端低估 + 基本面反转确认
```

### 三、流派决策树

```
从目标公司的财务数据出发，依次检查：

Step 1: 检查是否符合"纯硬收息"
  |
  +-- 股息率 > 5%（基于当前股价）？
  |     +-- 否 -> 跳到 Step 2
  |     +-- 是 -> 继续检查
  |           [ ] 连续5年以上派息记录？
  |           [ ] 无有息负债或极低有息负债？
  |           [ ] 经营现金流 / 净利润 > 100%？
  |           [ ] 派息率稳定在40%以上？
  |           全部满足 -> 归入"纯硬收息"
  |           不满足 -> 跳到 Step 2

Step 2: 检查是否符合"烟蒂股"
  |
  +-- PB < 0.3 或 净现金 > 市值？
  |     +-- 否 -> 跳到 Step 3
  |     +-- 是 -> 继续检查
  |           [ ] 清算价值 > 当前市值？
  |               清算价值 = 现金 + 应收*70% + 存货*50%
  |                        + 固定资产*30% - 全部负债
  |           [ ] 无有息负债或极低有息负债？
  |           [ ] 管理层无频繁供股/配股记录？
  |           全部满足 -> 归入"烟蒂股"
  |           不满足 -> 跳到 Step 3

Step 3: 检查是否符合"关联方资源"
  |
  +-- 控股股东为大型央企/国企集团？
  |     +-- 否 -> 跳到 Step 4
  |     +-- 是 -> 继续检查
  |           [ ] 母公司有可量化的优质资产未注入？
  |           [ ] 上市平台估值相对集团资产折价明显？
  |           [ ] 存在明确的资产整合/注入预期或历史？
  |           [ ] 关联交易为正面赋能而非利益输送？
  |           满足3项以上 -> 归入"关联方资源"
  |           不满足 -> 跳到 Step 4

Step 4: 检查是否符合"价值发现"
  |
  +-- 以下条件满足2项以上：
        [ ] PE < 10（或处于历史PE的20%以下分位）
        [ ] FCF / 市值 > 10%
        [ ] PB < 1.0 且 ROE > 8%
        [ ] 行业处于周期底部区域
        [ ] 经营现金流出现由负转正或大幅改善
        满足2项以上 -> 归入"价值发现"
        不满足 -> 无法归类，需人工判断或回避
```

### 四、各流派详细标准

#### 纯硬收息型

| 维度 | 买入标准 | 卖出标准 |
|------|----------|----------|
| 股息率 | > 5% | < 4%（估值修复完成） |
| 派息历史 | 连续5年以上 | 连续2年减少 |
| 有息负债 | 无或极低 | 有息负债大幅增加 |
| 现金转化 | 经营现金流/净利润 > 100% | 经营现金流恶化 |
| 派息率 | 40%-80%可持续区间 | 派息率 > 100%（寅吃卯粮） |

**核心风险**：派息可持续性 -- 需验证FCF能否覆盖分红总额
**验证公式**：FCF覆盖率 = 自由现金流 / 年度分红总额，需 > 1.0

#### 价值发现型

| 维度 | 买入标准 | 卖出标准 |
|------|----------|----------|
| PE | < 10 | > 15 |
| FCF收益率 | > 10% | < 5% |
| 周期位置 | 底部区域 | 周期见顶 |
| 现金流 | 由负转正或大幅改善 | 连续2年下滑 |
| 催化剂 | 可识别的拐点信号 | 基本面恶化 |

**核心风险**：周期判断错误，估值陷阱（低PE但盈利持续恶化）
**验证方法**：用周期分析算子确认周期位置，排除"低PE陷阱"

#### 烟蒂股型

| 维度 | 买入标准 | 卖出标准 |
|------|----------|----------|
| PB | < 0.3 | >= 0.6 |
| 净现金 vs 市值 | 净现金 > 市值 | 净现金大幅减少 |
| 清算价值 | > 市值 | 资产质量恶化 |
| 有息负债 | 无或极低 | 有息负债增加 |
| 管理层 | 无供股历史 | 诚信问题暴露 |

**核心风险**：价值毁灭 -- 管理层持续消耗现金而不回馈股东
**验证方法**：检查管理人诚信评级，确认无频繁供股/配股记录

#### 关联方资源型

| 维度 | 买入标准 | 卖出标准 |
|------|----------|----------|
| 母公司背景 | 大型央企/国企 | 母公司战略调整 |
| 资源注入 | 可量化预期 | 注入预期兑现 |
| 估值折价 | 明显低于可比公司 | 溢价超过合理水平 |
| 负债 | 无或低 | 关联交易损害利益 |
| 治理 | 关联交易公允透明 | 利益输送迹象 |

**核心风险**：注入时间不确定，关联交易不公允
**验证方法**：量化母公司可注入资产规模，对比上市平台当前市值

### 五、混合型处理规则

当一家公司同时符合多个流派时：
1. 纯硬收息 + 价值发现 -> 以纯硬收息为主（更确定性高）
2. 纯硬收息 + 关联方资源 -> 双重利好，可提升仓位
3. 烟蒂股 + 价值发现 -> 以烟蒂股逻辑为主（清算价值优先）
4. 任何流派 + 管理层不可信 -> 降级或排除

### 六、分析输出模板

1. **流派归属**：[纯硬收息/价值发现/烟蒂股/关联方资源/无法归类]
2. **关键判据**：满足哪些核心条件，具体数值
3. **买入条件检查**：逐项列出该流派买入标准的达标情况
4. **核心风险**：该流派特有的主要风险及当前状态
5. **与其他流派的交叉**：是否同时符合其他流派特征
